header backgroundcolor changed and add some resources

--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,13 @@
 html,
 body,
 #root {
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  min-height: 100vh;
   font-family: "Fredoka", sans-serif;
 }
 
 #root {
-  background-color: #21272e;
+  background-color: rgb(20 24 28);
 }
 
 .loader,
